now using flexboxes for footer + fixed background__gradient spacing

--- a/style/shared.css
+++ b/style/shared.css
@@ -17,14 +17,14 @@
     z-index: -1;
 }
 
-/* .background__gradient {
+.background__gradient {
     position: fixed;
-    top: 4.5625rem;
+    top: 3.17rem;
     width: 100%;
     height: 9.75rem;
     background: linear-gradient(0deg, rgba(0,0,0,0), rgba(21, 101, 192, 1));
     z-index: 0;
-} */
+}
 
 @media (min-width: 40rem) {
     .background__gradient {
@@ -112,11 +112,11 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .main-footer__link {
-    display: inline-block;
     margin: 0 1rem;
 }
 
